Add support for file list reload.

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
 		</ul>
 	</div>
 	<div id="options">
-		<button id="add-file" title="New File"><img src="img/add.png"></button><button id="remove-file" title="Remove File"><img src="img/remove.png"></button><button id="add-folder" title="New Folder"><img src="img/create-folder.png"></button>
+		<button id="add-file" title="New File"><img src="img/add.png"></button><button id="remove-file" title="Remove File"><img src="img/remove.png"></button><button id="refresh-files" title="Refresh Files"><img src="img/refresh-files.png"></button><button id="add-folder" title="New Folder"><img src="img/create-folder.png"></button>
 		<button id="gear-menu" class="right" title="More Options"><img src="img/gear.png"></button>
 	</div>
 	<div id="content"></div>
